--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -50,7 +50,7 @@
                         <a class="sidebar-text sidebar-button" href="{% url 'home' %}">Home</a>
                     </li>
                     <li>
-                        <a class="sidebar-text sidebar-button" href="{% url 'add_Items' %}">Add Items</a>
+                        <a class="sidebar-text sidebar-button" href="{% url 'add_items' %}">Add Items</a>
                     </li>
                     <li>
                         <a class="sidebar-text sidebar-button" href="">Update Items</a>
