--- a/homepage/templates/itemlist.html
+++ b/homepage/templates/itemlist.html
@@ -8,12 +8,15 @@
 <div>
     <h2>{{ category.name }} Items</h2>
     <br><br>
-        {% for item in items %}
-        <br>
-            <h5>{{ item.name }}</h5>
-        {% endfor %}
+    {% for item in items %}
+    <br>
+        <h5>{{ item.name }}</h5>
+        <a href="{% url 'add_item_chair' item.id %}">
+            <button class="ghost-pink">Add</button>
+        </a><br>
+    {% endfor %}
 
-        <br><br>
-    <a href="{% url 'add_items' %}">Back to Categories</a>
+    <br><br>
+    <a href="{% url 'add_items' %}"><button class="ghost-pink">Back to Categories</button></a>
 </div>
 {% endblock content %}
