--- a/homepage/templates/login.html
+++ b/homepage/templates/login.html
@@ -52,6 +52,7 @@
                         <div class="align-middle"> 
                             <button class="ghost-pink" type="submit">Log In</button>         
                             {# <button class="ml-2 ghost-red">Exit</button> #}
+                            <h1>hello</h1>
                         </div>
                     </div>
                 </form>
