--- a/homepage/templates/additemform.html
+++ b/homepage/templates/additemform.html
@@ -7,9 +7,9 @@
         max-width: 600px;
         margin: 0 auto;
         padding: 20px;
-        border: 1px solid #ccc;
+        border: 1px solid #000;
         border-radius: 5px;
-        background-color: #f5f5f5;
+        background-color: #000;
     }
     
     /* CSS for form groups */
@@ -17,6 +17,11 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 20px;
+    }
+    .label_style{
+        font-weight: bold;
+        font-size: 30px;
+        font-family:Georgia, 'Times New Roman', Times, serif;
     }
     
     .form-group label {
@@ -28,7 +33,7 @@
     .form-group input[type="text"],
     .form-group select {
         padding: 10px;
-        border: 1px solid #ccc;
+        border: 1px solid #000;
         border-radius: 5px;
     }
     
@@ -38,24 +43,6 @@
         margin-top: 20px;
     }
     
-    .form-actions input[type="submit"] {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    
-    /* CSS for "Go Back" button */
-    #goBackButton {
-        padding: 10px 20px;
-        background-color: #ccc;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    
     /* Media query for responsiveness */
     @media (max-width: 768px) {
         .form-container {
@@ -63,8 +50,8 @@
         }
     }
     </style>
-<div class="form-container">
-    <h2>Add Item</h2>
+<div class="form-container"><center>
+    <h2>Add the item here</h2></center>
 
     <!-- Add the 'novalidate' attribute to disable client-side validation -->
     <form method="post" novalidate class="item-form">
@@ -73,20 +60,20 @@
 
         {% for field in form %}
         <div class="form-group">
-            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            <label class="label_style" for="{{ field.id_for_label }}">{{ field.label }}</label>
             {{ field }}
         </div>
         {% endfor %}
-
+<center>
         <div class="form-actions">
-            <input type="submit" value="Add Item">
+            <input  class="ghost-pink" type="submit" value="Add Item">
         </div>
     </form>
 
-    <br><br>
+    <br>
 
     <button id="goBackButton" class="ghost-pink">Go Back</button>
-</div>
+</div></center>
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
