--- a/homepage/templates/home.html
+++ b/homepage/templates/home.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <div style="color:#505fec; font-style: bold; font-size: 3rem; border-bottom: 1px solid #fff">Welcome, {{ request.user.username }}</div>
+    <div style="color:#ea2088; font-style: bold; font-size: 3rem; border-bottom: 1px solid #fff">Welcome, {{ request.user.username }}</div>
 
     <br>
 
