--- a/homepage/templates/additemform.html
+++ b/homepage/templates/additemform.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Add Item {% endblock title %}
+{% block title %} Add Item{{ item }}{% endblock title %}
 
 {% block content %}<style>/* CSS for the form container */
     .form-container {
@@ -51,7 +51,7 @@
     }
     </style>
 <div class="form-container"><center>
-    <h2>Add the item here</h2></center>
+    <h2>Add the {{ item.name }} item here</h2></center>
 
     <!-- Add the 'novalidate' attribute to disable client-side validation -->
     <form method="post" novalidate class="item-form">
