--- a/homepage/templates/ibm_lab.html
+++ b/homepage/templates/ibm_lab.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
-{% load static %}
-
-{% block title %}  Lab Details {% endblock title %}
+{% block title %} Lab Items {% endblock title %}
 
 {% block content %}
-<h3>IBM Lab</h3>
+    <center><h1>IBM LAB</h1><br><br><br>
+    <!-- <p>Lab: IBM LAB</p> -->
+    <p>Number of Chairs: {{ chair_count }}</p>
+    <p>Number of Tables: {{ table_count }}</p>
+    <p>Number of Projectors: {{ projector_count }}</p>
+    <p>Number of Printers: {{ printer_count }}</p>
+    <p>Number of Network Switches: {{ switch_count }}</p>
+    <p>Number of Projector Screens: {{ screen_count }}</p>
+</center>
+    <!-- Add similar lines for other item categories -->
 {% endblock content %}
