--- a/homepage/templates/researchlab.html
+++ b/homepage/templates/researchlab.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <center>
-        <h1>IBM LAB</h1><br><br>
+        <h1>{{ lab }} Lab</h1><br>
         <p>Number of Chairs: {{ chair_count }}</p>
         <p>Number of Tables: {{ table_count }}</p>
         <p>Number of Projectors: {{ projector_count }}</p>
@@ -25,9 +25,6 @@
         <p>Number of Extension Boxes: {{ extension_box_count }}</p>
         <p>Number of Connecting Wires: {{ connecting_wire_count }}</p>
     </center>
-</center>
-<!-- lab_template.html -->
-    <h1>{{ lab }} Lab</h1>
 
     <h2>Chair Counts:</h2>
     <ul>
