--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -52,7 +52,7 @@
                         <a class="sidebar-text sidebar-button" href="{% url 'add_items' %}">Add Items</a>
                     </li>
                     <li>
-                        <a class="sidebar-text sidebar-button" href="">Update Items</a>
+                        <a class="sidebar-text sidebar-button" href="{% url 'update_items' %}">Update Items</a>
                     </li>
                     <li>
                         <a class="sidebar-text sidebar-button" href="">Delete Items</a>
