--- a/homepage/templates/ibmlab.html
+++ b/homepage/templates/ibmlab.html
@@ -27,7 +27,7 @@
     }
 </style>
 <center>
-    <h1>IBM Lab</h1><br>
+    <h1>IBM LAB</h1><br>
     <table>
         <tr>
             <th class="item">Item</th>
