--- a/homepage/templates/islab.html
+++ b/homepage/templates/islab.html
@@ -121,7 +121,7 @@
             <td class="count">{{ count }}</td>
         </tr>
         {% endfor %}
-    </table>milar tables for other item categories -->
+    </table>
 
 </body>
 </html>
