--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -57,12 +57,23 @@
                     <li>
                         <a class="sidebar-text sidebar-button" href="">Delete Items</a>
                     </li>
+                    <li>
+                        <a href="#UserSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button">Generate report</a>
+                        <ul class="collapse list-unstyled" id="UserSubmenu">
+                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'ibmlab' %}" target="blank">IBM Lab</a> </li>
+                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'researchlab' %}" target="blank">RESEARCH Lab</a> </li>
+                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'cclab' %}" target="blank">CC Lab</a> </li>
+                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'projectlab' %}" target="blank">PROJECT Lab</a> </li>
+                                <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'generate_pdf' 'islab' %}" target="blank">IS Lab</a> </li>
+                        </ul>
+                    </li>
+
 
                 <li class="bottomleft">
-                    <a href="#UserSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button">{{ request.user.username }}</a>
-                    <ul class="collapse list-unstyled" id="UserSubmenu">
+                    <a href="#UsersSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button">{{ request.user.username }}</a>
+                    <ul class="collapse list-unstyled" id="UsersSubmenu">
                         {% if request.user.is_superuser %}
-                            <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'admin:index' %}">Admin Page</a> </li>
+                            <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'admin:index' %}" >Admin Page</a> </li>
                         {% endif %}
                             <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'logout' %}">Logout</a> </li>
                     </ul>
