--- a/homepage/templates/pdf.html
+++ b/homepage/templates/pdf.html
@@ -136,6 +136,10 @@
                 <td>Number of Connecting Wires</td>
                 <td>{{ connecting_wire_count }}</td>
             </tr>
+            <tr>
+                <td>Total Products</td>
+                <td>{{ total }}</td>
+            </tr>
         </table>
     </center>
 
