--- a/homepage/templates/home.html
+++ b/homepage/templates/home.html
@@ -7,8 +7,8 @@
     <div style="color:#ea2088; font-style: bold; font-size: 3rem; border-bottom: 1px solid #fff">Welcome, {{ request.user.username }}</div>
     <br>
     <div id="image-container">
-        <a id="image-link" href="{% url 'lab_view' 'researchlab' %}">
-            <img id="rotating-image" src="{% static 'images/researchlab.jpeg' %}" alt="Rotating Image" style="width: 100%; height: 80vh; object-fit: cover;">
+        <a id="image-link" href="{% url 'lab_view' 'wirelesslab' %}">
+            <img id="rotating-image" src="{% static 'images/wirelesslab.jpeg' %}" alt="Rotating Image" style="width: 100%; height: 80vh; object-fit: cover;">
         </a>
     </div>
 </div>
