--- a/homepage/templates/wirelesslab.html
+++ b/homepage/templates/wirelesslab.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <center>
-        <h1>RESEARCH LAB</h1><br>
+        <h1>Wireless LAB</h1><br>
         <table>
             <tr>
                 <th class="item">Item</th>
