date coloum updated

--- a/homepage/templates/pdf.html
+++ b/homepage/templates/pdf.html
@@ -53,87 +53,87 @@
         <h1>{{Name_of_the_lab}}</h1><br>
         <table>
             <tr>
-                <th>Item</th>
+                <th>Item Type</th>
                 <th>Count</th>
             </tr>
             <tr>
-                <td>Number of Chairs</td>
+                <td>Chairs</td>
                 <td>{{ chair_count }}</td>
             </tr>
             <tr>
-                <td>Number of Tables</td>
+                <td>Tables</td>
                 <td>{{ table_count }}</td>
             </tr>
             <tr>
-                <td>Number of Projectors</td>
+                <td>Projectors</td>
                 <td>{{ projector_count }}</td>
             </tr>
             <tr>
-                <td>Number of Printers</td>
+                <td>Printers</td>
                 <td>{{ printer_count }}</td>
             </tr>
             <tr>
-                <td>Number of Network Switches</td>
+                <td>Network Switches</td>
                 <td>{{ switch_count }}</td>
             </tr>
             <tr>
-                <td>Number of Projector Screens</td>
+                <td>Projector Screens</td>
                 <td>{{ screen_count }}</td>
             </tr>
             <tr>
-                <td>Number of Biometric Devices</td>
+                <td>Biometric Devices</td>
                 <td>{{ biometric_count }}</td>
             </tr>
             <tr>
-                <td>Number of Tube Lights</td>
+                <td>Tube Lights</td>
                 <td>{{ tubelight_count }}</td>
             </tr>
             <tr>
-                <td>Number of Fans</td>
+                <td>Fans</td>
                 <td>{{ fan_count }}</td>
             </tr>
             <tr>
-                <td>Number of CCTV Cameras</td>
+                <td>CCTV Cameras</td>
                 <td>{{ cctv_count }}</td>
             </tr>
             <tr>
-                <td>Number of Keyboards</td>
+                <td>Keyboards</td>
                 <td>{{ keyboard_count }}</td>
             </tr>
             <tr>
-                <td>Number of Mice</td>
+                <td>Mice</td>
                 <td>{{ mouse_count }}</td>
             </tr>
             <tr>
-                <td>Number of Cameras</td>
+                <td>Cameras</td>
                 <td>{{ camera_count }}</td>
             </tr>
             <tr>
-                <td>Number of Boards</td>
+                <td>Boards</td>
                 <td>{{ board_count }}</td>
             </tr>
             <tr>
-                <td>Number of Cupboards</td>
+                <td>Cupboards</td>
                 <td>{{ cupboard_count }}</td>
             </tr>
             <tr>
-                <td>Number of Monitors</td>
+                <td>Monitors</td>
                 <td>{{ monitor_count }}</td>
             </tr>
             <tr>
-                <td>Number of CPUs</td>
+                <td>CPUs</td>
                 <td>{{ cpu_count }}</td>
             </tr>
             <tr>
-                <td>Number of Sockets</td>
+                <td>Sockets</td>
                 <td>{{ socket_count }}</td>
             </tr>
             <tr>
-                <td>Number of Extension Boxes</td>
+                <td>Extension Boxes</td>
                 <td>{{ extension_box_count }}</td>
             </tr>
             <tr>
-                <td>Number of Connecting Wires</td>
+                <td>Connecting Wires</td>
                 <td>{{ connecting_wire_count }}</td>
             </tr>
             <tr>
